--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,8 +110,8 @@
           <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
             <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
           </span>
-          <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
-            <i class="fa fa-github" aria-hidden="true"></i>
+          <span onclick="window.open('{{ site.data.main_info.research_gate }}')" style="cursor: pointer">
+            <i class="ai-researchgate-square ai-lg" aria-hidden="true"></i>
           </span>
         </div>
       </div>
