--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@
             <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
           </span>
           <span onclick="window.open('{{ site.data.main_info.research_gate }}')" style="cursor: pointer">
-            <i class="ai-researchgate-square ai-lg" aria-hidden="true"></i>
+            <i class="ai ai-researchgate ai-lg" aria-hidden="true"></i>
           </span>
         </div>
       </div>
