--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,13 +70,15 @@
             <p>{{ site.data.main_info.title2 }}</p>
             <p>{{ site.data.main_info.email }}</p>
             <p>
-              <span onclick="window.open('{{ site.data.main_info.linkedin }}')" style="cursor: pointer">
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              
+              <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
+               <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
               </span>
 
-              <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
-                <i class="fa fa-github" aria-hidden="true"></i>
+              <span onclick="window.open('{{ site.data.main_info.research_gate }}')" style="cursor: pointer">
+               <i class="ai ai-research-gate ai-lg" aria-hidden="true"></i>
               </span>
+
             </p>
         </div>
       </div>
@@ -91,7 +93,7 @@
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#publications" | prepend: site.baseurl }}>Publications</a></li>
           <!-- <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#projects" | prepend: site.baseurl }}>Projects</a></li> -->
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Vita</a></li>
-          <!-- <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#people" | prepend: site.baseurl }}>Collaborators</a></li> -->
+          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#people" | prepend: site.baseurl }}>Collaborators</a></li>
         </ul>
       </div>
     </nav>
@@ -107,12 +109,11 @@
           {{ site.data.main_info.email }}
         </div>
         <div class="four columns">
-          <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
-            <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
-          </span>
-          <span onclick="window.open('{{ site.data.main_info.research_gate }}')" style="cursor: pointer">
-            <i class="ai ai-researchgate ai-lg" aria-hidden="true"></i>
-          </span>
+          
+        <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
+         <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
+        </span>
+
         </div>
       </div>
     </div>
