--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,10 @@
             <p>{{ site.data.main_info.title2 }}</p>
             <p>{{ site.data.main_info.email }}</p>
             <p>
+              <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
+                <i class="fa fa-github" aria-hidden="true"></i>
+              </span>
+              
               <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
                 <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
               </span>
@@ -103,6 +107,10 @@
           {{ site.data.main_info.email }}
         </div>
         <div class="four columns">
+          <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
+            <i class="fa fa-github" aria-hidden="true"></i>
+          </span>
+          
           <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
             <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
           </span>
